fix(hrms-javafx-client): 2025/12/16 18:19